[package]
name = "botting-breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = {version="4.0.18", features=["env", "derive"]}
dotenvy = "0.15.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
statrs = "0.16.0"
